[gd_scene load_steps=8 format=3 uid="uid://bjxyci4gifbyb"]

[ext_resource type="Texture2D" uid="uid://d0iq57did5p4r" path="res://Assets/Scharacter.png" id="1_0ic5a"]
[ext_resource type="Script" path="res://Scripts/player.gd" id="1_36n2m"]
[ext_resource type="Script" path="res://Scripts/health_system.gd" id="3_k0xct"]
[ext_resource type="Script" path="res://Scripts/shooting_system.gd" id="4_881yo"]
[ext_resource type="AudioStream" uid="uid://2wbfu8g7ck1" path="res://Assets/Sound/pistol-shot.mp3" id="5_73kxt"]
[ext_resource type="AudioStream" uid="uid://0fx7p41ggu1h" path="res://Assets/Sound/pistol-reload.mp3" id="6_elxad"]
[ext_resource type="Texture2D" uid="uid://cdviujlby0sks" path="res://Assets/visibility_mask_1.png" id="7_4bntq"]

[node name="Player" type="CharacterBody2D"]
collision_mask = 64
script = ExtResource("1_36n2m")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_0ic5a")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
position = Vector2(-12, 1)
polygon = PackedVector2Array(-11, -11, -4, -15, -5, -20, 6, -21, 10, -14, 12, -6, 14, -4, 14, 0, 12, 6, 14, 7, 18, 6, 27, 5, 37, 7, 39, 10, 32, 11, 29, 12, 18, 13, 21, 16, 13, 19, -4, 19, -8, 13, -15, 11, -15, -12)

[node name="HealthSystem" type="Node" parent="."]
script = ExtResource("3_k0xct")

[node name="ShootingSystem" type="Marker2D" parent="."]
position = Vector2(26, 9)
script = ExtResource("4_881yo")

[node name="Sounds" type="Node" parent="."]

[node name="ShotStreamPlayer" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource("5_73kxt")

[node name="ReloadStreamPlayer" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource("6_elxad")

[node name="PointLight2D" type="PointLight2D" parent="."]
light_mask = 2
position = Vector2(-9, 0)
blend_mode = 2
texture = ExtResource("7_4bntq")
texture_scale = 2.0
